--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
 						<a href="about.html" class="menu-nav__link">My Story</a>
 					</li>
 					<li class="menu-nav__item">
-						<a href="work.html" class="menu-nav__link">Resume</a>
+						<a href="work.html" class="menu-nav__link">Work Life</a>
 					</li>
 					<li class="menu-nav__item">
 						<a href="projects.html" class="menu-nav__link">Projects</a>
