--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 		<!-- BOOT STRAP LINK -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-		<link rel="stylesheet" href="assest/styles/css/style.css">
+		<link rel="stylesheet" href="assets/styles/css/style.css">
 
 		<!-- FONT AWESOME LINK -->
 		<script src="https://kit.fontawesome.com/4f133ed2d1.js" crossorigin="anonymous"></script>
@@ -57,7 +57,7 @@
         <h3 class="highlight-center">Course Projects</h3>
         <div class="projects__items">
           <div class="projects__item">
-            <img src="assest/images/projects/ellchan-anime.jpg" alt="My project">
+            <img src="assets/images/projects/ellchan-anime.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ellchan-anime/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -68,7 +68,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/ranger-game.jpg" alt="My project">
+            <img src="assets/images/projects/ranger-game.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ranger-game/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/ecommerce-product-page.jpg" alt="My project">
+            <img src="assets/images/projects/ecommerce-product-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ecommerce-product-page-main/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -94,7 +94,7 @@
         <h3 class="highlight-center">React Projects</h3>
         <div class="projects__items">
           <div class="projects__item">
-            <img src="assest/images/projects/buisness-card.jpg" alt="My project">
+            <img src="assets/images/projects/buisness-card.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/buisness-card/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/star-wars.jpg" alt="My project">
+            <img src="assets/images/projects/star-wars.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://app-star-wars.netlify.app" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -120,7 +120,7 @@
         <h3 class="highlight-center">Small Projects</h3>
         <div class="projects__items bottom-container">
           <div class="projects__item">
-            <img src="assest/images/projects/anime-generator.jpg" alt="My project">
+            <img src="assets/images/projects/anime-generator.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://github.com/EllieJ87/AnimeGenerator" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -131,7 +131,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/first-portfolio-page.jpg" alt="My project">
+            <img src="assets/images/projects/first-portfolio-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/PersonalPortfolioWebpage/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -142,7 +142,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/product-page.jpg" alt="My project">
+            <img src="assets/images/projects/product-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ProductLandingPage/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -153,7 +153,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/technical-documentation.jpg" alt="My project">
+            <img src="assets/images/projects/technical-documentation.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/TechnicalDocumentation/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -164,7 +164,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/mindful-meditation.jpg" alt="My project">
+            <img src="assets/images/projects/mindful-meditation.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/MindfulnessMeditation/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/drum-machine.jpg" alt="My project">
+            <img src="assets/images/projects/drum-machine.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/DrumMachine/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -186,7 +186,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/tribute-page.jpg" alt="My project">
+            <img src="assets/images/projects/tribute-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/TributePage/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -198,7 +198,7 @@
           </div>
 
           <div class="projects__item">
-            <img src="assest/images/projects/random-quote-machine.jpg" alt="My project">
+            <img src="assets/images/projects/random-quote-machine.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/RandomQuoteMachine/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -209,7 +209,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/markdown-preview.jpg" alt="My project">
+            <img src="assets/images/projects/markdown-preview.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/MarkdownPreviewer/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -220,7 +220,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/js-calculator.jpg" alt="My project">
+            <img src="assets/images/projects/js-calculator.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/JavascriptCalculator/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="projects__item">
-            <img src="assest/images/projects/survey-form.jpg" alt="My project">
+            <img src="assets/images/projects/survey-form.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://github.com/EllieJ87/SurveyForm" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
@@ -266,7 +266,7 @@
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 
-		<script src="assest/script/main.js"></script>
+		<script src="assets/script/main.js"></script>
 
 	</body>
 </html>
