--- a/projects.html
+++ b/projects.html
@@ -57,35 +57,29 @@
         <h3 class="highlight-center">Course Projects</h3>
         <div class="projects__items">
           <div class="projects__item">
+            <h5 class="projects__title">Ellchan Anime</h5>
             <img src="assets/images/projects/ellchan-anime.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ellchan-anime/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
               </a>
-              <a href="https://github.com/EllieJ87/ellchan-anime" class="projects__btn" target="_blank">
-                <i class="fab fa-github"></i> Github
-              </a>
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Ranger Game</h5>
             <img src="assets/images/projects/ranger-game.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ranger-game/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
               </a>
-              <a href="https://github.com/EllieJ87/ranger-game" class="projects__btn" target="_blank">
-                <i class="fab fa-github"></i> Github
-              </a>
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Ecommerce Project</h5>
             <img src="assets/images/projects/ecommerce-product-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ecommerce-product-page-main/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
-              </a>
-              <a href="https://github.com/EllieJ87/ecommerce-product-page-main" class="projects__btn" target="_blank">
-                <i class="fab fa-github"></i> Github
               </a>
             </div>
           </div>
@@ -94,6 +88,7 @@
         <h3 class="highlight-center">React Projects</h3>
         <div class="projects__items">
           <div class="projects__item">
+            <h5 class="projects__title">Business Card</h5>
             <img src="assets/images/projects/buisness-card.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/buisness-card/" class="projects__btn" target="_blank">
@@ -105,6 +100,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Star Wars App</h5>
             <img src="assets/images/projects/star-wars.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://app-star-wars.netlify.app" class="projects__btn" target="_blank">
@@ -120,6 +116,7 @@
         <h3 class="highlight-center">Small Projects</h3>
         <div class="projects__items bottom-container">
           <div class="projects__item">
+            <h5 class="projects__title">Anime Generator</h5>
             <img src="assets/images/projects/anime-generator.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://github.com/EllieJ87/AnimeGenerator" class="projects__btn" target="_blank">
@@ -131,6 +128,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">First Portfolio</h5>
             <img src="assets/images/projects/first-portfolio-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/PersonalPortfolioWebpage/" class="projects__btn" target="_blank">
@@ -142,6 +140,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Product Page</h5>
             <img src="assets/images/projects/product-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ProductLandingPage/" class="projects__btn" target="_blank">
@@ -153,6 +152,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Technical Doc</h5>
             <img src="assets/images/projects/technical-documentation.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/TechnicalDocumentation/" class="projects__btn" target="_blank">
@@ -164,6 +164,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Mindfulness Meditation</h5>
             <img src="assets/images/projects/mindful-meditation.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/MindfulnessMeditation/" class="projects__btn" target="_blank">
@@ -175,6 +176,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Drum Machine</h5>
             <img src="assets/images/projects/drum-machine.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/DrumMachine/" class="projects__btn" target="_blank">
@@ -186,6 +188,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Tribute Page</h5>
             <img src="assets/images/projects/tribute-page.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/TributePage/" class="projects__btn" target="_blank">
@@ -198,6 +201,7 @@
           </div>
 
           <div class="projects__item">
+            <h5 class="projects__title">Quote Generator</h5>
             <img src="assets/images/projects/random-quote-machine.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/RandomQuoteMachine/" class="projects__btn" target="_blank">
@@ -209,6 +213,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Markdown Previewer</h5>
             <img src="assets/images/projects/markdown-preview.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/MarkdownPreviewer/" class="projects__btn" target="_blank">
@@ -220,6 +225,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">JS Calculator</h5>
             <img src="assets/images/projects/js-calculator.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://elliej87.github.io/JavascriptCalculator/" class="projects__btn" target="_blank">
@@ -231,6 +237,7 @@
             </div>
           </div>
           <div class="projects__item">
+            <h5 class="projects__title">Survey Form</h5>
             <img src="assets/images/projects/survey-form.jpg" alt="My project">
             <div class="projects__btns">
               <a href="https://github.com/EllieJ87/SurveyForm" class="projects__btn" target="_blank">
