--- a/projects.html
+++ b/projects.html
@@ -63,6 +63,9 @@
               <a href="https://elliej87.github.io/ellchan-anime/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
               </a>
+              <a href="https://github.com/EllieJ87/ellchan-anime" class="projects__btn" target="_blank">
+                <i class="fab fa-github"></i> Github
+              </a>
             </div>
           </div>
           <div class="projects__item">
@@ -72,6 +75,9 @@
               <a href="https://elliej87.github.io/ranger-game/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
               </a>
+              <a href="https://github.com/EllieJ87/ranger-game" class="projects__btn" target="_blank">
+                <i class="fab fa-github"></i> Github
+              </a>
             </div>
           </div>
           <div class="projects__item">
@@ -80,6 +86,9 @@
             <div class="projects__btns">
               <a href="https://elliej87.github.io/ecommerce-product-page-main/" class="projects__btn" target="_blank">
                 <i class="fas fa-eye"></i> Preview
+              </a>
+              <a href="https://github.com/EllieJ87/ecommerce-product-page-main" class="projects__btn" target="_blank">
+                <i class="fab fa-github"></i> Github
               </a>
             </div>
           </div>
